[fix] main page modal fix, navbar login button mobile fix

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -85,6 +85,10 @@
     padding: 20px 50px;
 }
 
+md-block img {
+    height: auto !important;
+}
+
 @media screen and (max-width: 1200px) {
     .project-modal-container {
         width: 100%;
