--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -94,7 +94,7 @@ nav {
     }
 
     .login-container {
-        display: none;
+        display: none !important;
     }
 
     #login {
